load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load(
    "//:defs.bzl",
    "beam_runtime_archive",
    "dialyzer_plt",
    "elixir_dialyzer_test",
    "elixir_fips_runtime_test",
    "elixir_generated_source",
    "elixir_ls",
    "elixir_prebuilt_release",
    "elixir_protocols",
    "elixir_release_test",
    "elixir_toolchain",
    "erlang_app",
    "erlang_common_test",
    "erlang_eunit_test",
    "hex_package_assets",
    "mix_coverage_test",
    "mix_deps_update",
    "mix_ecto_test",
    "mix_escript",
    "mix_format",
    "mix_format_test",
    "mix_iex",
    "mix_lcov_test",
    "mix_library",
    "mix_local",
    "mix_phx_assets",
    "mix_phx_server",
    "mix_release",
    "mix_test",
    "mix_typecheck_test",
    "mix_wallaby_test",
    "mix_xref_test",
    "otp_crypto_sdk",
    "otp_prebuilt_release",
    "otp_toolchain",
    "rustler_nif",
    "rustler_precompiled_archive",
)
load(":analysis_cc_toolchain.bzl", "analysis_cc_toolchain_config")
load(":analysis_tests.bzl", "fake_directory", "fake_executable", "fake_runtime_source", "generated_file", "mix_lock_analysis_check", "otp_runtime_closure_analysis_check", "rustler_precompiled_analysis_check", "toolchain_analysis_check", "version_catalog_analysis_check")

package(default_visibility = ["//visibility:public"])

exports_files([
    "src/artifact_normalizer_tests.erl",
    "src/runtime_archive_driver_tests.erl",
])

filegroup(
    name = "otp_files",
    srcs = glob(["runtime/otp/**"]),
)

filegroup(
    name = "elixir_files",
    srcs = glob(["runtime/elixir/**"]),
)

otp_prebuilt_release(
    name = "otp_x86_64",
    srcs = [":otp_files"],
    erlexec = "runtime/otp/erts-17.0.3/bin/erlexec",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    fully_static = True,
    version = "29.0.3",
    version_marker = "runtime/otp/releases/29/OTP_VERSION",
)

otp_prebuilt_release(
    name = "otp_arm64",
    srcs = [":otp_files"],
    erlexec = "runtime/otp/erts-17.0.3/bin/erlexec",
    exec_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    fully_static = True,
    version = "29.0.3",
    version_marker = "runtime/otp/releases/29/OTP_VERSION",
)

alias(
    name = "otp",
    actual = select({
        "@platforms//cpu:arm64": ":otp_arm64",
        "@platforms//cpu:x86_64": ":otp_x86_64",
    }),
)

otp_runtime_closure_analysis_check(
    name = "otp_runtime_closure_analysis",
    otp = ":otp_fips_provider",
    tags = ["manual"],
)

elixir_prebuilt_release(
    name = "runtime",
    srcs = [":elixir_files"],
    home_marker = "runtime/elixir/bin/elixir",
    otp = ":otp",
    version = "1.20.2",
    version_marker = "runtime/elixir/VERSION",
)

elixir_toolchain(
    name = "elixir",
    elixir = ":runtime",
    native_bash = ":fake_activation",
    native_make = ":fake_activation",
    native_perl = ":fake_activation",
    native_posix_tools = [":fake_activation"],
)

otp_toolchain(
    name = "otp_toolchain_impl",
    otp = ":otp",
)

toolchain(
    name = "otp_toolchain",
    toolchain = ":otp_toolchain_impl",
    toolchain_type = "//:otp_toolchain_type",
)

fake_executable(name = "fake_activation")

# This deliberately non-runnable toolchain verifies native rule analysis
# without consulting Bazel's local C/C++ auto-configuration. Real compilation
# is covered by the rules_fips-backed source-integration matrix.
fake_executable(name = "analysis_cc_tool")

filegroup(
    name = "analysis_cc_files",
    srcs = [":analysis_cc_tool"],
)

analysis_cc_toolchain_config(
    name = "analysis_cc_x86_64_config",
    cpu = "x86_64",
    tool = ":analysis_cc_tool",
)

analysis_cc_toolchain_config(
    name = "analysis_cc_arm64_config",
    cpu = "arm64",
    tool = ":analysis_cc_tool",
)

cc_toolchain(
    name = "analysis_cc_x86_64_impl",
    all_files = ":analysis_cc_files",
    ar_files = ":analysis_cc_files",
    compiler_files = ":analysis_cc_files",
    dwp_files = ":analysis_cc_files",
    linker_files = ":analysis_cc_files",
    objcopy_files = ":analysis_cc_files",
    strip_files = ":analysis_cc_files",
    supports_param_files = 0,
    toolchain_config = ":analysis_cc_x86_64_config",
    toolchain_identifier = "rules-elixir-mix-analysis-x86-64",
)

cc_toolchain(
    name = "analysis_cc_arm64_impl",
    all_files = ":analysis_cc_files",
    ar_files = ":analysis_cc_files",
    compiler_files = ":analysis_cc_files",
    dwp_files = ":analysis_cc_files",
    linker_files = ":analysis_cc_files",
    objcopy_files = ":analysis_cc_files",
    strip_files = ":analysis_cc_files",
    supports_param_files = 0,
    toolchain_config = ":analysis_cc_arm64_config",
    toolchain_identifier = "rules-elixir-mix-analysis-arm64",
)

toolchain(
    name = "analysis_cc_x86_64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":analysis_cc_x86_64_impl",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "analysis_cc_arm64",
    exec_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    toolchain = ":analysis_cc_arm64_impl",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

fake_executable(name = "fake_execution_wrapper")

fake_executable(name = "fake_chromedriver")

version_catalog_analysis_check(name = "version_catalog_analysis")

fake_directory(name = "fake_crypto_sysroot")

otp_crypto_sdk(
    name = "static_crypto_sdk",
    sysroot = ":fake_crypto_sysroot",
)

otp_crypto_sdk(
    name = "provider_crypto_sdk",
    activation_args = [
        "fipsinstall",
        "-module",
        "{sysroot}/lib/fips.so",
        "-out",
        "{activation_root}/fipsmodule.cnf",
    ],
    activation_exec_tool = ":fake_activation",
    activation_tool = ":fake_activation",
    activation_tool_release_path = "bin/activate_crypto",
    build_elf_interpreter = "/__bazel_hermetic_runtime__/declared-loader",
    execution_exec_wrapper = ":fake_execution_wrapper",
    execution_wrapper = ":fake_execution_wrapper",
    execution_wrapper_environment = {
        "RULES_TEST_PROGRAM": "{program}",
    },
    execution_wrapper_release_path = "bin/runtime-launch",
    fully_static = False,
    runtime_destinations = [
        "bin/activate_crypto",
        "bin/runtime-launch",
        "lib/fips.so",
    ],
    runtime_environment = {
        "CRYPTO_MODULE_CONF": "{activation_root}/module.cnf",
        "CRYPTO_PROVIDER_CONF": "{sysroot}/provider.cnf",
        "CRYPTO_PROVIDER_MODULES": "{sysroot}/lib",
    },
    runtime_files = [
        ":fake_activation",
        ":fake_execution_wrapper",
        "runtime/otp/erts-17.0.3/bin/beam.smp",
    ],
    sysroot = ":fake_crypto_sysroot",
)

otp_prebuilt_release(
    name = "otp_fips_provider_x86_64",
    srcs = [":otp_files"],
    crypto_sdk = ":provider_crypto_sdk",
    erlexec = "runtime/otp/erts-17.0.3/bin/erlexec",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    fips = "required",
    runtime_wrapped = True,
    static_crypto_nif = True,
    version = "29.0.3",
    version_marker = "runtime/otp/releases/29/OTP_VERSION",
)

otp_prebuilt_release(
    name = "otp_fips_provider_arm64",
    srcs = [":otp_files"],
    crypto_sdk = ":provider_crypto_sdk",
    erlexec = "runtime/otp/erts-17.0.3/bin/erlexec",
    exec_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    fips = "required",
    runtime_wrapped = True,
    static_crypto_nif = True,
    version = "29.0.3",
    version_marker = "runtime/otp/releases/29/OTP_VERSION",
)

alias(
    name = "otp_fips_provider",
    actual = select({
        "@platforms//cpu:arm64": ":otp_fips_provider_arm64",
        "@platforms//cpu:x86_64": ":otp_fips_provider_x86_64",
    }),
)

elixir_prebuilt_release(
    name = "fips_runtime",
    srcs = [":elixir_files"],
    home_marker = "runtime/elixir/bin/elixir",
    otp = ":otp_fips_provider",
    version = "1.20.2",
    version_marker = "runtime/elixir/VERSION",
)

elixir_toolchain(
    name = "fips_elixir",
    elixir = ":fips_runtime",
)

otp_toolchain(
    name = "fips_otp_toolchain_impl",
    otp = ":otp_fips_provider",
)

toolchain(
    name = "fips_otp_toolchain",
    toolchain = ":fips_otp_toolchain_impl",
    toolchain_type = "//:otp_toolchain_type",
)

toolchain(
    name = "fips_toolchain",
    toolchain = ":fips_elixir",
    toolchain_type = "//:toolchain_type",
)

toolchain(
    name = "toolchain",
    toolchain = ":elixir",
    toolchain_type = "//:toolchain_type",
)

fake_runtime_source(
    name = "runtime_archive_source",
    kind = "otp",
    otp = ":otp_fips_provider",
    root = ":fake_crypto_sysroot",
    version = "29.0.3",
)

beam_runtime_archive(
    name = "runtime_archive_analysis_fixture",
    package_dir = "otp-29.0.3-linux-x86_64",
    runtime = ":runtime_archive_source",
    tags = ["manual"],
)

# This target is analysis-only. It forces Bazel to load the public API and
# resolve the combined OTP/Elixir toolchain without executing a host runtime.
mix_library(
    name = "analysis_fixture",
    srcs = ["lib/analysis_fixture.ex"],
    app_name = "analysis_fixture",
    mix_config = "mix.exs",
    tags = ["manual"],
)

mix_library(
    name = "native_analysis_fixture",
    srcs = ["lib/analysis_fixture.ex"],
    app_name = "native_analysis_fixture",
    mix_config = "mix.exs",
    native_build = True,
    tags = ["manual"],
)

mix_library(
    name = "analysis_test_lib",
    srcs = [
        "lib/analysis_fixture.ex",
        "lib/analysis_protocol.ex",
    ],
    app_name = "analysis_fixture",
    generated_srcs = [":generated_source"],
    hex_package = "analysis_fixture",
    hex_package_repository = "hexpm",
    hex_package_sha256 = "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
    hex_package_version = "0.1.0",
    mix_config = "mix.exs",
    mix_env = "test",
    priv = ["priv/static/app.js"],
    tags = ["manual"],
)

hex_package_assets(
    name = "hex_assets_analysis_fixture",
    package = ":analysis_test_lib",
    paths = ["priv/static/app.js"],
)

mix_escript(
    name = "escript_analysis_fixture",
    lib = ":analysis_test_lib",
    mix_env = "test",
    tags = ["manual"],
)

mix_deps_update(
    name = "deps_update_analysis_fixture",
    hex = "@hex_pm//:lib",
    lib = ":analysis_test_lib",
    tags = ["manual"],
)

elixir_protocols(
    name = "protocols_analysis_fixture",
    apps = [":analysis_test_lib"],
    tags = ["manual"],
)

generated_file(
    name = "generated_source_file",
    content = "defmodule GeneratedAnalysisFixture do\n  def value, do: :generated\nend\n",
    filename = "generated_analysis_fixture.ex",
)

elixir_generated_source(
    name = "generated_source",
    src = ":generated_source_file",
    destination = "lib/generated_analysis_fixture.ex",
)

mix_test(
    name = "exunit_analysis_fixture",
    srcs = [
        "test/analysis_fixture_second_test.exs",
        "test/analysis_fixture_test.exs",
        "test/test_helper.exs",
    ],
    lib = ":analysis_test_lib",
    tags = ["manual"],
)

mix_coverage_test(
    name = "coverage_analysis_fixture",
    srcs = [
        "test/analysis_fixture_second_test.exs",
        "test/analysis_fixture_test.exs",
        "test/test_helper.exs",
    ],
    lib = ":analysis_test_lib",
    tags = ["manual"],
)

mix_xref_test(
    name = "xref_analysis_fixture",
    srcs = [
        "lib/analysis_fixture.ex",
        "lib/analysis_protocol.ex",
        "mix.exs",
    ],
    lib = ":analysis_test_lib",
    tags = ["manual"],
    xref_args = [
        "graph",
        "--format",
        "stats",
        "--label",
        "compile-connected",
    ],
)

dialyzer_plt(
    name = "analysis_fixture_plt",
    otp_apps = [
        "erts",
        "kernel",
        "stdlib",
    ],
    tags = ["manual"],
)

elixir_dialyzer_test(
    name = "dialyzer_analysis_fixture",
    apps = [":analysis_test_lib"],
    plt = ":analysis_fixture_plt",
    tags = ["manual"],
)

mix_format_test(
    name = "format_analysis_fixture",
    srcs = [
        "lib/analysis_fixture.ex",
        "mix.exs",
        "test/analysis_fixture_test.exs",
        "test/test_helper.exs",
    ],
    lib = ":analysis_test_lib",
    tags = ["manual"],
)

mix_format(
    name = "format_sources_analysis_fixture",
    srcs = [
        "lib/analysis_fixture.ex",
        "test/analysis_fixture_test.exs",
    ],
    formatter_config = ".formatter.exs",
    mix_config = "mix.exs",
    tags = ["manual"],
)

rustler_precompiled_archive(
    name = "selected_rustler_precompiled_archive",
    archive = select({
        "@platforms//cpu:arm64": "test/analysis_fixture_test.exs",
        "@platforms//cpu:x86_64": "lib/analysis_fixture.ex",
    }),
)

rustler_precompiled_analysis_check(
    name = "rustler_precompiled_selection_analysis",
    archive = ":selected_rustler_precompiled_archive",
    expected_basename = select({
        "@platforms//cpu:arm64": "analysis_fixture_test.exs",
        "@platforms//cpu:x86_64": "analysis_fixture.ex",
    }),
)

mix_library(
    name = "rustler_precompiled_staging_analysis_fixture",
    srcs = ["lib/analysis_fixture.ex"],
    app_name = "analysis_fixture",
    mix_config = "mix.exs",
    rustler_precompiled_artifacts = [":selected_rustler_precompiled_archive"],
    tags = ["manual"],
)

mix_typecheck_test(
    name = "typecheck_analysis_fixture",
    srcs = [
        "lib/analysis_fixture.ex",
        "mix.exs",
    ],
    lib = ":analysis_test_lib",
    tags = ["manual"],
)

mix_release(
    name = "release_analysis_fixture",
    app_name = "analysis_fixture",
    application = ":analysis_fixture",
    tags = ["manual"],
)

elixir_release_test(
    name = "release_runtime_analysis_fixture",
    release = ":release_analysis_fixture",
    tags = ["manual"],
)

mix_phx_assets(
    name = "phx_assets_analysis_fixture",
    srcs = ["priv/static/app.js"],
    lib = ":analysis_fixture",
    tags = ["manual"],
)

mix_library(
    name = "fips_analysis_fixture",
    srcs = ["lib/analysis_fixture.ex"],
    app_name = "analysis_fixture",
    config = ["config/runtime.exs"],
    mix_config = "mix.exs",
    tags = ["manual"],
)

mix_release(
    name = "fips_release_analysis_fixture",
    application = ":fips_analysis_fixture",
    fips = "required",
    tags = ["manual"],
)

elixir_fips_runtime_test(
    name = "fips_runtime_analysis_fixture",
    tags = ["manual"],
)

mix_local(
    name = "local_analysis_fixture",
    lib = ":analysis_fixture",
    tags = ["manual"],
    task = "compile",
)

mix_phx_server(
    name = "phx_server_analysis_fixture",
    lib = ":analysis_fixture",
    tags = ["manual"],
)

mix_iex(
    name = "iex_analysis_fixture",
    lib = ":analysis_fixture",
    tags = ["manual"],
)

elixir_ls(
    name = "elixir_ls_analysis_fixture",
    lib = ":analysis_fixture",
    tags = ["manual"],
)

mix_ecto_test(
    name = "ecto_analysis_fixture",
    srcs = [
        "test/analysis_fixture_test.exs",
        "test/test_helper.exs",
    ],
    createdb = "runtime/otp/erts-17.0.3/bin/erlexec",
    initdb = "runtime/otp/erts-17.0.3/bin/erlexec",
    lib = ":analysis_test_lib",
    postgres = "runtime/otp/erts-17.0.3/bin/erlexec",
    tags = ["manual"],
)

mix_wallaby_test(
    name = "wallaby_analysis_fixture",
    srcs = [
        "test/analysis_fixture_test.exs",
        "test/test_helper.exs",
    ],
    chrome = ":fake_activation",
    chromedriver = ":fake_chromedriver",
    lib = ":analysis_test_lib",
    tags = ["manual"],
)

mix_lcov_test(
    name = "lcov_analysis_fixture",
    srcs = [
        "test/analysis_fixture_test.exs",
        "test/test_helper.exs",
    ],
    lib = ":analysis_test_lib",
    tags = ["manual"],
)

rustler_nif(
    name = "rustler_nif_analysis_fixture",
    destination = "native/libanalysis_fixture.so",
    shared_library = "runtime/otp/erts-17.0.3/bin/beam.smp",
    tags = ["manual"],
)

mix_lock_analysis_check(
    name = "lock_analysis",
    content = """%{
  "compile_tool": {:hex, :compile_tool, "1.0.0", "outer", [:rebar3], [], "hexpm", "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"},
  "web_app" => {:hex, :web_app, "2.0.0", "outer", [:mix], [{:compile_tool, "~> 1.0", [hex: :compile_tool, runtime: false]}, {:unused_optional, "~> 1.0", [hex: :unused_optional, optional: true]}], "hexpm", "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"}
}
""",
    tags = ["manual"],
)

toolchain_analysis_check(
    name = "toolchain_analysis",
    tags = ["manual"],
)

erlang_app(
    name = "erlang_analysis_fixture",
    srcs = [
        "src/analysis_fixture.erl",
        "src/analysis_fixture_SUITE.erl",
    ],
    app_name = "erlang_analysis_fixture",
    tags = ["manual"],
    version = "0.1.0",
)

erlang_eunit_test(
    name = "eunit_analysis_fixture",
    apps = [":erlang_analysis_fixture"],
    tags = ["manual"],
)

mix_library(
    name = "compile_only_dep",
    srcs = ["fixtures/compile_dep/lib/compile_only_dep.ex"],
    app_name = "compile_only_dep",
    mix_config = "fixtures/compile_dep/mix.exs",
    mix_env = "test",
    tags = ["manual"],
)

mix_library(
    name = "runtime_consumer",
    srcs = ["fixtures/runtime_consumer/lib/runtime_consumer.ex"],
    app_name = "runtime_consumer",
    compile_deps = [":compile_only_dep"],
    mix_config = "fixtures/runtime_consumer/mix.exs",
    mix_env = "test",
    tags = ["manual"],
)

mix_test(
    name = "compile_runtime_boundary_test",
    srcs = [
        "fixtures/runtime_consumer/test/runtime_consumer_test.exs",
        "fixtures/runtime_consumer/test/test_helper.exs",
    ],
    lib = ":runtime_consumer",
    tags = ["manual"],
)

erlang_common_test(
    name = "common_test_analysis_fixture",
    apps = [":erlang_analysis_fixture"],
    config = ["common_test.config"],
    groups = ["values"],
    repeat = 2,
    suite_data = {
        "fixtures/analysis_fixture_SUITE_data/payload.txt": "analysis_fixture_SUITE/payload.txt",
    },
    suites = ["analysis_fixture_SUITE"],
    tags = ["manual"],
)
