module(
    name = "rules_elixir_mix_bcr_test",
    version = "0.0.0",
    bazel_compatibility = [">=9.2.0"],
)

bazel_dep(name = "rules_elixir_mix")
bazel_dep(name = "platforms", version = "1.1.0")

local_path_override(
    module_name = "rules_elixir_mix",
    path = "../..",
)

register_toolchains(
    "//:otp_toolchain",
    "//:toolchain",
)
