module(
    name = "basic",
    version = "0.1.0",
    bazel_compatibility = [">=9.2.0"],
)

bazel_dep(
    name = "rules_elixir_mix",
    version = "0.0.0",
)
local_path_override(
    module_name = "rules_elixir_mix",
    path = "../..",
)

# Register a checksum-pinned source or prebuilt toolchain from
# ../../docs/source_toolchains.md or ../../docs/prebuilt_toolchains.md.
